--- a/rental_management/templates/core/register.html
+++ b/rental_management/templates/core/register.html
@@ -6,7 +6,7 @@
     <div class="col-md-8">
         <div class="card">
             <div class="card-header">
-                <h2 class="text-center">Register as Tenant</h2>
+                <h2 class="text-center">Create User</h2>
             </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data">
